# MontComm

./: .gitignore  .gitmodules  README.md  build.sh  开发者手册.md
Client/src/: CMakeLists.txt  ClientConf.json  ClientMain.cpp  ClientMsgHandler.cpp  ClientWorker.cpp
Client/src/include/: ClientMsgHandler.h  ClientWorker.h
Client_Qt/: ClientConf.json  ClientMain.cpp  ClientMsgBussiness.cpp  ClientMsgBussiness.h  ClientWorker.cpp  ClientWorker.h  Client_Qt.pro  Client_Qt_zh_CN.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
CommMngr/src/: CommMngr.crt  CommMngr.key  CommMngr.p12
CommMngr/src/backEnd/CommMngr/: dependency-reduced-pom.xml  pom.xml
CommMngr/src/backEnd/CommMngr/src/main/java/CommMngr/: MSMsg.java  Main.java  MngrHttpSvr.java  MngrWorkerSvr.java
CommMngr/src/backEnd/CommMngr/src/main/resources/: config.properties  log4j.properties
CommMngr/src/frontEnd/qxcommmanager/: package-lock.json
CommMngr/src/frontEnd/qxcommmanager/src/api/model/: commmngr.js
CommMngr/src/frontEnd/qxcommmanager/src/config/: route.js
CommMngr/src/frontEnd/qxcommmanager/src/views/cert/: ExportCert.vue
CommMngr/src/frontEnd/qxcommmanager/src/views/domain/: DomainManage.vue
CommMngr/src/frontEnd/qxcommmanager/src/views/key/: GenerateKey.vue  ImportKey.vue
CommMngr/src/frontEnd/qxcommmanager/src/views/monitor/: ServerMonitor.vue
CommMngr/src/frontEnd/qxcommmanager/src/views/register/: RoleRegister.vue  index.vue
MSShare/: MSMsg.pb.cc  MSMsg.proto  msshare_build.sh
MSShare/include/: MSMsg.h  MSMsg.pb.h
SCShare/: CMakeLists.txt  SCMsg.pb.cc  SCMsg.proto  SCShareCommon.cpp  scshare_build.sh
SCShare/include/: SCMsg.h  SCMsg.pb.h  SCShare.h
Server/src/: CMakeLists.txt  CommMngrClient.cpp  ServerConf.json  ServerMain.cpp  ServerMsgHandler.cpp  ServerWorker.cpp
Server/src/include/: CommMngrClient.h  ServerMsgHandler.h  ServerWorker.h
utils/: CMakeLists.txt  UtilsCmdLine.c  UtilsCommonUtil.c  UtilsCrypto.c  UtilsLogIO.c  UtilsMem.c  UtilsModuleCommon.c  UtilsModuleHealth.c  UtilsMsg.c  UtilsThreadPool.c  UtilsTimer.c
utils-jni/: build.sh  pom.xml
utils-jni/src/main/java/CommMngr/: UtilJNI.java
utils-jni/src/main/native/: util_jni.c
utils/UnitTest/: UnitTest.h  UnitTestCommonUtil.c  UnitTestCrypto.c  UnitTestHealth.c  UnitTestMem.c  UnitTestMsg.c  UnitTestTPool.c  UnitTestTimer.c
utils/include/: CommonInclude.h  Errno.h  UtilsCmdLine.h  UtilsCommonUtil.h  UtilsCrypto.h  UtilsList.h  UtilsLogIO.h  UtilsMem.h  UtilsModuleCommon.h  UtilsModuleHealth.h  UtilsMsg.h  UtilsThreadPool.h  UtilsTimer.h
